# pamac-tray-icon-plasma-up

./: CMakeLists.txt  UpdatesChecker.cpp  UpdatesChecker.h  main.cpp  pamac_tray.cpp  pamac_tray.h  resources.qrc  run_guard.cpp  translation_converter.py
i18n/: pamac_tray_ar.qm  pamac_tray_ast.qm  pamac_tray_az_AZ.qm  pamac_tray_be.qm  pamac_tray_bg.qm  pamac_tray_ca.qm  pamac_tray_ca@valencia.qm  pamac_tray_cs.qm  pamac_tray_da.qm  pamac_tray_de.qm  pamac_tray_de_CH.qm  pamac_tray_de_DE.qm  pamac_tray_el.qm  pamac_tray_el_GR.qm  pamac_tray_en_GB.qm  pamac_tray_eo.qm  pamac_tray_es.qm  pamac_tray_es_419.qm  pamac_tray_es_AR.qm  pamac_tray_es_ES.qm  pamac_tray_es_MX.qm  pamac_tray_et.qm  pamac_tray_eu.qm  pamac_tray_fa.qm  pamac_tray_fa_IR.qm  pamac_tray_fi.qm  pamac_tray_fr.qm  pamac_tray_gl.qm  pamac_tray_he.qm  pamac_tray_hi.qm  pamac_tray_hi_IN.qm  pamac_tray_hr.qm  pamac_tray_hu.qm  pamac_tray_id.qm  pamac_tray_ie.qm  pamac_tray_is.qm  pamac_tray_it.qm  pamac_tray_ja.qm  pamac_tray_ka.qm  pamac_tray_kab.qm  (+29 more)
